--- a/style.css
+++ b/style.css
@@ -6,8 +6,21 @@ border: none;
 box-sizing: border-box;
 }
 
-body {
+#cuerpo {
     display: flex;
+    background: #212529 !important;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    height: 100vh !important;
+    display: flex;
+}
+
+#barra {
+    height: 100vh;
+    background: #333131;
 }
 
 .sidebar {
@@ -21,7 +34,8 @@ body {
     color: #fff;
     overflow: hidden;
     transition: all 0.5s linear;
-    background: #333131;
+    margin: auto;
+
 }
 
 .sidebar:hover {
@@ -29,16 +43,12 @@ body {
     transition: 0.3s;
 }
 
-.logo {
-    height: 80px;
-    padding: 16px;
-}
-
 .menu {
-    height: 88%;
+    margin-top: 50px;
+    height: 70%;
     position: relative;
     list-style: none;
-    padding: 0;
+    padding: 0px;
 }
 
 .menu li {
@@ -50,6 +60,10 @@ body {
 
 .menu li:hover, .active {
     background: rgba(244, 244, 248, 0.256);
+}
+
+.menu a:hover {
+    color: #e8e8e8;
 }
 
 .menu a {
@@ -67,6 +81,24 @@ body {
 
 .menu a i {
     font-size: 1.2rem;
+}
+
+#logo {
+    width: 2rem;
+    height: 2rem;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+}
+
+.letra_logo {
+    font-size: 14px;
+    padding-top: 15px ;
+    padding-left: 5px;
 }
 
 .logout {
@@ -299,6 +331,46 @@ tfoot td {
     background: none;
     cursor: pointer;
 }
+
+/*
+Deposito y Retiro
+*/
+.card-container1 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-section {
+    margin-top: 20px;
+    flex: 1;
+    margin-right: 20px; /* Espacio entre las tarjetas */
+    background-color: #f0f0f0; /* Color de fondo de las tarjetas */
+    padding: 20px;
+    border-radius: 10px; /* Borde redondeado */
+    height: 200px;
+}
+
+.card1 {
+    text-align: center;
+}
+
+.card1:last-child {
+    margin-right: 0; /* Elimina el margen derecho de la última tarjeta */
+}
+
+.card1 button {
+    padding: 10px 20px;
+    border: 2px;
+    border-radius: 5px;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    margin-top: 15px;
+}
+
+
+
 
 
 /*
